fix: tests & readme & env exemple

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ OPENAI_API_BASE=https://albert.api.etalab.gouv.fr/v1
 OPENAI_MODEL=gpt-3.5-turbo
 OPENAI_ANALYSIS_MODEL=gpt-4
 
+# Configuration du serveur
+PORT=8000
+
 # Configuration du logging
 LOG_LEVEL=INFO
 
