feat: add env var to grist instance

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ ENV=development
 # Configuration du logging
 LOG_LEVEL=INFO
 
+# Configuration de l'API Grist
+GRIST_API_BASE_URL=https://docs.getgrist.com/api
+
 # Clé API Grist optionnelle (pour les tests uniquement)
 # En production, la clé est envoyée dans le header x-api-key de chaque requête
 GRIST_API_KEY=sk-your-grist-key-here 
