--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,9 @@
 [pytest]
 # Configuration pour Pytest
 
+# Ajouter le répertoire racine au PYTHONPATH
+pythonpath = .
+
 # Répertoires de tests
 testpaths = tests
 
@@ -11,22 +14,25 @@ python_functions = test_*
 
 # Options d'affichage
 addopts =
-    # Affichage verbeux
+    # Affichage par fichier avec résultats (. pour pass, F pour fail)
     -v
-    # Afficher les print statements
-    -s
-    # Afficher le résumé des tests
-    --tb=short
-    # Couverture de code
-    --cov=app
-    --cov-report=term-missing
-    --cov-report=html:htmlcov
-    # Parallélisation (optionnel, décommenter si pytest-xdist installé)
-    # -n auto
+    # Résumé court des échecs
+    --tb=line
     # Strict markers
     --strict-markers
-    # Ordre des tests (optionnel)
-    # --randomly-order
+    # Masquer tous les warnings
+    --disable-warnings
+    
+    # Couverture de code (décommenter si besoin)
+    # --cov=app
+    # --cov-report=term-missing
+    # --cov-report=html:htmlcov
+    
+    # Options avancées (décommenter si besoin)
+    # -v  # Mode verbeux
+    # -s  # Afficher les print statements
+    # --tb=short  # Traceback plus détaillé
+    # -n auto  # Parallélisation (nécessite pytest-xdist)
 
 # Markers personnalisés
 markers =
@@ -44,21 +50,21 @@ markers =
 # Timeout par défaut pour les tests async (en secondes)
 asyncio_mode = auto
 
-# Ignorer certains warnings
+# Ignorer certains warnings (si --disable-warnings n'est pas utilisé)
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
-    # Ignorer les warnings spécifiques de Pydantic
-    ignore:Valid config keys have changed:UserWarning
+    ignore::UserWarning
 
-# Configuration de logging pour les tests
-log_cli = true
-log_cli_level = INFO
-log_cli_format = %(asctime)s [%(levelname)8s] %(message)s
-log_cli_date_format = %Y-%m-%d %H:%M:%S
+# Configuration de logging pour les tests (désactivée par défaut)
+# Décommenter si vous voulez voir les logs
+# log_cli = true
+# log_cli_level = INFO
+# log_cli_format = %(asctime)s [%(levelname)8s] %(message)s
+# log_cli_date_format = %Y-%m-%d %H:%M:%S
 
-# Fichier de logs pour les tests
-log_file = tests/logs/pytest.log
-log_file_level = DEBUG
-log_file_format = %(asctime)s [%(levelname)8s] %(name)s - %(message)s
-log_file_date_format = %Y-%m-%d %H:%M:%S
+# Fichier de logs pour les tests (décommenter si besoin)
+# log_file = tests/logs/pytest.log
+# log_file_level = DEBUG
+# log_file_format = %(asctime)s [%(levelname)8s] %(name)s - %(message)s
+# log_file_date_format = %Y-%m-%d %H:%M:%S
