docs: env exemple

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ OPENAI_API_KEY=sk-your-etalab-api-key-here
 OPENAI_API_BASE=https://albert.api.etalab.gouv.fr/v1
 
 # Configuration des modèles IA
-OPENAI_MODEL=gpt-3.5-turbo
-OPENAI_ANALYSIS_MODEL=gpt-4
+DEFAULT_MODEL=gpt-3.5-turbo
+ANALYSIS_MODEL=gpt-4
 
 # Configuration du serveur
 PORT=8000
